01-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: docker.io/nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
