02-pod.yml
# Multi container example

apiVersion: v1
kind: Pod
metadata:
  name: 02-pod
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
    - name: mongo
      image: docker.io/mongo
