pod-sec-policy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pod-sec-policy
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged

---
apiVersion: app/v1
kind: Deployment
metadata:
  name: test-psp
  namespace: pod-sec-policy
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: docker.io/nginx
