probs.yml
apiVersion: v1
kind: Pod
metadata:
  name: probs
  labels:
    test: liveness
spec:
  containers:
    - name: liveness
      image: registry.k8s.io/busybox
      args:
      - bin/sh
      - -c
      - touch /tmp/healthy; sleep 5; rm -rf /tmp/healthy; sleep 30
      livenessProb:
        exec:
          command:
          - cat
          - /tmp/healthy
        initialDelaySeconds: 1  
        periodSeconds: 5
      readynessProb:
        exec:
          command:
          - echo
          - hello
        initialDelaySeconds: 1
        periodSeconds: 5
