scheduler.yml
apiversion: v1
kind: Pod
metatada:
  name: nginx
  labels:
    appType: nginx
spec:
  containers:
    - name: nginx
      image: nginx
  nodeName: ip-192-168-22-6.ec2.internal
---
apiVersion: v1
kind: Pod
metadata:
  name: with-node-affinity
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulngIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpression:
            - key: appType
              operator: in
              values:
              - database
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpression:
          - key: another-node-label-key
            operator: in
            values:
            - another-node-label-value
  containers:
    - name: nginx
      image: nginx
