04-service.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-04
  labels:
    app: nginx
    example: service
spec:
  containers:
    - name: nginx
      image: docker.io/nginx

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: service-nginx
# spec:
#   selector:
#     app: nginx
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
    - name: debug
      image: docker.io/rkalluru/debug

---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-np
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: service-nginx-lb
# spec:
#   type: LoadBalancer
#   selector:
#     app: nginx
#   ports:
#     - protocol: TCP
#       port: 80
#       # targetPort: 80
