hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-php-apache
  labels:
    run: dep-php-apache 
spec:
  replicas: 3
  selector: 
    matchLabels:
      run: pod-php-apache
  template:
    metadata:
      labels:
        run: pod-php-apache
    spec:
      containers:
      - name: p1-php-apache
        image: docker.io/nginx
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: svc-php-apache
  labels:
    run: svc-php-apache
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: pod-php-apache
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: default
  labels:
    app: ui
spec:
  containers:
    - name: debug
      image: rkalluru/debug
