fix-kubeautit.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-all-network
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
