network-policies.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    project: demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    project: demo
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: frontend
  labels:
    app: ui
spec:
  containers:
    - name: debug
      image: rkalluru/debug
---
apiVersion: v1
kind: Service
metadata:
  name: debug-svc
  namespace: backend
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: backend
  labels:
    app: api
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-frontend
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: demo
    - podSelector:
        matchLabels:
          app: ui
    ports:
    - protocol: TCP
      port: 80
  egress:
  - {}
